// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with pageTitle 1`] = `
<Fragment>
  <BreadcrumbSchema
    breadcrumb={Array []}
    siteTitle="MongoDB Documentation"
    slug="view-analyze"
  />
  <Wrapper>
    <p>
      <BreadcrumbContainer
        homeCrumb={
          Object {
            "title": "Docs Home",
            "url": "https://docs.mongodb.com/",
          }
        }
        lastCrumb={
          Object {
            "title": "View & Analyze Data",
            "url": "view-analyze",
          }
        }
      />
    </p>
  </Wrapper>
</Fragment>
`;

exports[`renders correctly with siteTitle 1`] = `
<Fragment>
  <BreadcrumbSchema
    breadcrumb={
      Array [
        Object {
          "path": "manage-data",
          "plaintext": "Interact with Your Data",
          "title": Array [
            Object {
              "position": Object {
                "start": Object {
                  "line": 2,
                },
              },
              "type": "text",
              "value": "Interact with Your Data",
            },
          ],
        },
        Object {
          "path": "documents",
          "plaintext": "Manage Documents",
          "title": Array [
            Object {
              "position": Object {
                "start": Object {
                  "line": 4,
                },
              },
              "type": "text",
              "value": "Manage Documents",
            },
          ],
        },
      ]
    }
    siteTitle="MongoDB Compass"
    slug="documents/view"
  />
  <Wrapper>
    <p>
      <BreadcrumbContainer
        homeCrumb={
          Object {
            "title": "Docs Home",
            "url": "https://docs.mongodb.com/",
          }
        }
        lastCrumb={
          Object {
            "title": "MongoDB Compass",
            "url": "/",
          }
        }
      />
    </p>
  </Wrapper>
</Fragment>
`;
